fixed images in flexbox on IE11

--- a/app/styles/scss/modules/_base.scss
+++ b/app/styles/scss/modules/_base.scss
@@ -15,7 +15,7 @@ $arrow-size: 3rem;
 }
 
 .link {
-	display: inline-block;
+	display: block;
 	&--box {
 		&:hover {
 			opacity: 0.8;
